--- a/src/Components/SingleBook.css
+++ b/src/Components/SingleBook.css
@@ -22,3 +22,9 @@
 .selected {
     border: 5px solid red !important;
 }
+
+.position {
+    bottom: 4rem;
+    margin-left: 25%;
+    margin-right: 25%;
+}
