--- a/src/Components/SingleBook.css
+++ b/src/Components/SingleBook.css
@@ -27,4 +27,9 @@
     bottom: 4rem;
     margin-left: 25%;
     margin-right: 25%;
+    display: none !important;
+}
+
+.mb-3:hover .position {
+    display: block !important;
 }
