--- a/src/Components/SingleBook.css
+++ b/src/Components/SingleBook.css
@@ -4,7 +4,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    color: white;
     background-color: cadetblue;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -19,6 +18,10 @@
     border-bottom: 2px solid black;
 }
 
+.bordo {
+    border-bottom: 2px solid white;
+}
+
 .selected {
     border: 5px solid red !important;
 }
@@ -30,6 +33,6 @@
     display: none !important;
 }
 
-.mb-3:hover .position {
+.my-3:hover .position {
     display: block !important;
 }
