--- a/src/Components/MyFooter.css
+++ b/src/Components/MyFooter.css
@@ -1,3 +1,14 @@
-.br-20 {
-    border-radius: 20px !important;
+.margin-25 {
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.font-si {
+    font-size: 1.5rem !important;
+    font-family: cursive;
+    font-weight: bold !important;
+}
+
+.bo-sh {
+    box-shadow: 0 0 0 .25rem red !important;
 }
